[package]
name = "snake_vm_example"
version = "0.1.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snake_vm_sdk = {path = "../snake_vm_sdk"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true