[package]
name = "snake_example"
version = "0.1.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
snake_sdk = {git = "https://github.com/aitournament/snake_sdk"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true